--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Legend — PostHog Architecture</title>
     <meta name="description" content="Interactive C4 architecture diagram for the PostHog codebase" />
     <meta name="author" content="Legend" />
